feat: create new product interaction logging
