# routes/product_routes.go
@@ -17,6 +17,7 @@ type ProductRouteDependencies struct {
 func InitProductRoutes(app *fiber.App, deps ProductRouteDependencies) {
 	app.Post("/products", middlewares.JWTProtected, middlewares.SubscriptionMiddleware("Subscription-Product-Slot"), deps.ProductController.CreateProduct)
 	app.Post("/products/:productID/photos", middlewares.JWTProtected, deps.ProductController.UploadProductPhoto)
+	app.Post("/products/:productID/interactions", deps.ProductController.SendProductLog)
 
 	app.Get("/products", middlewares.JWTProtected, middlewares.RoleMiddleware("admin"), deps.ProductController.GetAllProducts)
 	app.Get("/products/:id", deps.ProductController.GetProductByID)
